--- a/MyWebSite.csproj
+++ b/MyWebSite.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Apis" Version="1.49.0" />
+    <PackageReference Include="Google.Apis.Drive.v3" Version="1.49.0.2201" />
     <PackageReference Include="Google.Apis.YouTube.v3" Version="1.49.0.2197" />
     <PackageReference Include="Google.Cloud.Storage.V1" Version="3.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="5.0.1" />
@@ -25,6 +26,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.23" />
     <PackageReference Include="OrchardCore.Localization.Core" Version="1.0.0-rc2-13450" />
   </ItemGroup>
 
