--- a/MyWebSite.csproj
+++ b/MyWebSite.csproj
@@ -30,4 +30,8 @@
     <PackageReference Include="OrchardCore.Localization.Core" Version="1.0.0-rc2-13450" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\CompanyViewModels\" />
+  </ItemGroup>
+
 </Project>
